Detect workspace changes and track file modifications